# renewables-lcoe-api

./: .gitignore  Dockerfile  LICENSE  README.md  capacity_factors.py  gis.py  main.py  model.py  notebook.ipynb  pyproject.toml  requirements.txt  schema.py  ui.py
.github/workflows/: update_space.yml
data/World_PVOUT_GISdata_LTAy_AvgDailyTotals_GlobalSolarAtlas-v2_GEOTIFF/: PVOUT.tif  PVOUT.tif.xml
